Corrections for Patreon logo and setup wizard heading alignments. Corrections for setup wizard content size for mobile devices. Corrections for success screen insert headings in mobile sizes. Success screen infoboxes width and height, padding adjustment

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -159,7 +159,6 @@
 
 #patreon_setup_logo {
 
-	display:inline-block;
 	float:left;
 	vertical-align: top;
 	margin-right: 20px;
@@ -187,7 +186,9 @@
 	display:inline-block;
 	float:left;
 	width: auto;
+	max-width: 800px;
 	font-size: 125%;
+	padding-top: 0px;
 	
 }
 
@@ -211,14 +212,16 @@
 .patreon_success_insert {
 
 	display:inline-block;
+	box-sizing: border-box;
 	float: left;
 	margin: 5px;
-	padding: 10px;
-	padding-bottom: 30px;
+	padding: 20px;
+	padding-bottom: 10px;
 	background-color : #ffffff;
 	border: 1px solid #c0c0c0;
 	width : 100%;
-	max-width : 250px;
+	max-width : 250px;	
+	height: 330px;
 }
 
 .patreon_success_insert:hover {
@@ -256,11 +259,7 @@
 }
 
 .patreon_success_insert_heading h3 {
-	font-size: 175%;
+	font-size: 24px;
+	margin-left: 0px;
 }
 
-@media only screen and (max-width: 500px) {
-  .patreon_success_insert_heading h3 {
-    font-size: 50% !important;
-  }
-}
